@@ -48,6 +48,7 @@ struct {
         "» {+u}set-option -remove{} support\n"
         "» prompts auto select {+i}menu{} completions on space\n"
         "» explicit completion support ({+b}<c-x>...{}) in prompts\n"
+        "» {+u}write -atomic{} was replaced with {+u}write -method <method>{}\n"
     }, {
         20200901,
         "» daemon mode does not fork anymore\n"
