@@ -10,6 +10,9 @@ released versions.
 * Menu completions such as command name completion are now auto-inserted on
   space
 
+* `write -atomic` was replaced with `write -method [replace|overwrite]` to
+  make both write method available explicitely
+
 == Kakoune 2020.09.01
 
 * The `repl` and `send-text` aliases have been renamed respectively into
